# DjangoAppCenter

./: .gitignore  ChangeLog  DjangoAppCenter.profile.json  DjangoAppCenter.profile.json.copy  Dockerfile  README.md  README.rst  db.default.sqlite3  db.sqlite3  medicaly.sqlite3  package.py  requirements.txt  settings.json  settings.sqlite3  setup.cfg
AppCenter/: __main__.py  cli.py  db.sqlite3  manage.py
AppCenter/medicaly/: admin.py  apps.py  models.py  views.py
AppCenter/medicaly/migrations/: 0001_initial.py
AppCenter/settings/: __init__.py  admin.py  asgi.py  custom_config.py  dbrouters.py  urls.py  wsgi.py
AppCenter/simpleui/: __init__.py  apps.py
AppCenter/simpleui/templatetags/: simpletags.py
DjangoAppCenter/: __main__.py  cli.py  manage.py  utils.py  wsgi.py
DjangoAppCenter/dtos/: ret.py
DjangoAppCenter/extensions/apps/: permission_init.py
DjangoAppCenter/middlewares/: exception_catcher.py
DjangoAppCenter/settings/: __init__.py  admin.py  adminui.py  asgi.py  dbrouters.py  docker.py  email.py  loader.py  log.py  models.py  options.py  osprofile.py  profile.py  settings.default.json  urls.py  wsgi.py
DjangoAppCenter/settings/databases/: db.sqlite3  settings.sqlite3
DjangoAppCenter/settings/migrations/: 0001_initial.py  0002_auto_20210325_1121.py
DjangoAppCenter/settings/templates/: Dockerfile  db.default.sqlite3  settings.default.json
DjangoAppCenter/signals/: restart.py
DjangoAppCenter/simpleui/: __init__.py  apps.py
DjangoAppCenter/simpleui/templatetags/: simpletags.py
tests/: test_loader.py
(+7 files in other folders)
