
[metadata]
name = AppCenter
author = singein
author-email = singein@outlook.com
summary = awsome project created by pycman.
license = MIT
description-file = 
    README.rst
home-page = http://example.com
requires-python = >= 3.6

[files]
packages = 
    AppCenter


[entry_points]
console_scripts =
    cmd=package.module:function
