
[metadata]
name = DjangoAppCenter
author = singein
author-email = singein@outlook.com
summary = awsome project created by pycman.
license = MIT
description-file = 
    README.rst
home-page = http://example.com
requires-python = >= 3.6

[files]
packages = 
    DjangoAppCenter


[entry_points]
console_scripts =
    djapps=DjangoAppCenter.cli:entry
